[package]
name = "cargo-backup"
version = "0.3.0"
edition = "2021"
authors = ["Kiramily"]
keywords = ["cli", "backup", "restore", "github", "sync"]
description = "Backup utilty for cargo"
license = "MIT"
repository = "https://github.com/Kiramily/cargo-backup"
homepage = "https://github.com/Kiramily/cargo-backup"
categories = ["command-line-utilities"]


[[bin]]
path = "src/bin/sync.rs"
name = "cargo-sync"

[[bin]]
path = "src/bin/backup.rs"
name = "cargo-backup"

[[bin]]
path = "src/bin/restore.rs"
name = "cargo-restore"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1.15", features = ["cargo"] }
dirs = "4.0.0"
shellexpand = "2.1.0"
dialoguer = "0.10.0"
duct = "0.13.5"
ureq = { version = "2.4.0", features = ["json"] }
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1.56"
semver = { version = "1.0.10", features = ["serde"] }
