[package]
name = "cargo-backup"
version = "0.3.1"
edition = "2021"
authors = ["Kiramily"]
keywords = ["cli", "backup", "restore", "github", "sync"]
description = "Backup utilty for cargo"
license = "MIT"
repository = "https://github.com/Kiramily/cargo-backup"
homepage = "https://github.com/Kiramily/cargo-backup"
categories = ["command-line-utilities"]

[lib]
doctest = false

[[bin]]
name = "cargo-backup"
path = "src/bin/backup.rs"

[[bin]]
name = "cargo-restore"
path = "src/bin/restore.rs"

[[bin]]
name = "cargo-sync"
path = "src/bin/sync.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0.9", features = ["cargo"] }
dirs = "4.0.0"
shellexpand = "2.1.0"
semver = { version = "1.0.10", features = ["serde"] }
keyring = "1.2.0"
owo-colors = "3"
dialoguer = "0.10.2"
ureq = { version = "2.5.0", features = ["json"] }
toml = "0.5.9"
