[package]
name = "cargo-backup"
version = "0.4.2"
edition = "2021"
authors = ["Kiramily"]
keywords = ["cli", "backup", "restore", "github", "sync"]
description = "Backup utilty for cargo"
license = "MIT"
repository = "https://github.com/Kiramily/cargo-backup"
homepage = "https://github.com/Kiramily/cargo-backup"
categories = ["command-line-utilities"]

[lib]
doctest = false

[[bin]]
name = "cargo-backup"
path = "src/bin/backup.rs"

[[bin]]
name = "cargo-restore"
path = "src/bin/restore.rs"

[[bin]]
name = "cargo-sync"
path = "src/bin/sync.rs"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
clap = { version = "4.4.11", features = ["cargo"] }
dirs = "5.0.1"
shellexpand = "3.1.0"
semver = { version = "1.0.10", features = ["serde"] }
keyring = "2.1.0"
owo-colors = "3"
dialoguer = "0.11.0"
ureq = { version = "2.9.1", features = ["json"] }
toml = "0.8.8"
